--- a/_posts/2019-11-06-episode-1.md
+++ b/_posts/2019-11-06-episode-1.md
@@ -3,7 +3,7 @@ layout: post
 title: "Should you hear this?"
 date: 2019-11-06 15:00:00 +1100
 file: https://archive.org/download/infusingcomputing/InfusingComputingS1E1.mp3
-summary: "Our first episode and we explain what this whole podcast is about."
+summary: "Our first episode!"
 description: "Join us as we tell you why you should hear this."
 duration: "6:06"
 length: "366"
